--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
+body {
+  background-image: url('./images/super-mario-level-wallpaper-1680-x-1050.jpg');
+}
