imported html components into CardContainer for 1 card

--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,10 @@
   text-align: center;
   color: white;
   font-size: 36px;
+  /* background-image: url('./images/super-mario-level-wallpaper-1680-x-1050.jpg'); */
 }
 
-.App-logo {
-  height: 40vmin;
-}
+
 
 
 
