--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -3,7 +3,7 @@
     max-width: 200px;
     /* background-image: url('./marioBrothers7.png'); */
 }
-card {
+.card {
   height: 250px;
   width: 2500px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
