finally rendered a img to Card instead of adding it as a background-img

--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -4,10 +4,15 @@
     /* background-image: url('./marioBrothers7.png'); */
 }
 .card {
-  height: 250px;
-  width: 2500px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  position: relative;
-  margin: 0 auto;
+  height: 200px;
+  width: 200px;
+  /* box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); */
+  /* position: relative; */
+  /* margin: 0 auto; */
   margin-top: 30px;
+}
+.card img {
+  height: 100%;
+  width:  100%;
+
 }
