adjusted nav spacing & text alignment

--- a/src/components/BodyContainer/style.css
+++ b/src/components/BodyContainer/style.css
@@ -6,21 +6,26 @@
 
 .nav {
   min-height: 10vh;
-  background-color:goldenrod;
-  font-size: calc(15px + 2vmin);
-  font-weight: 450;
+  /* background-color:goldenrod; */
+  /* font-size: calc(20px + 2vmin);
+  font-weight: 550; */
   background-image: url('/images/background.jpg');
 
 }
-
 .nav a {
   color: white;
-  font-weight: 500;
+  font-size: calc(25px + 1vmin);
+  font-weight: 550;
+  /* font-weight: 500; */
   margin-top: 2%;
+  padding-left: 0;
+  scroll-padding-right: 0;
 }
 
 .jumbotron {
-  background-color: rgb(49, 49, 48);    
+  background-color: rgb(49, 49, 48); 
+  padding-top: 5rem; 
+  padding-bottom: 32px;  
 }
 
 header {
